<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9CD0E4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:textColor="#0099f0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:id="@+id/linear_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/main_text"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/text_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/text_participants"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/participants_amount"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/participants_hint"
            android:inputType="number"
            android:paddingStart="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/main_button"
        android:text="@string/main_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/linear_vertical"
        tools:layout_editor_absoluteX="0dp"
        android:background="#0099f0"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>